--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 *.aux
 *.bbl
 *.blg
+*.cb
+*.cb2
 *.dvi
 *.fdb_latexmk
 *.glg
@@ -13,20 +15,27 @@
 *.ilg
 *.ind
 *.ist
+*.loc
 *.lof
 *.log
 *.lot
+*.lox
 *.maf
 *.mtc
 *.mtc0
 *.nav
 *.nlo
 *.out
+/*.pdf
 *.pdfsync
 *.ps
 *.snm
+*.soc
 *.synctex.gz
+*.tdo
+*.thm
 *.toc
+*.upa
+*.upb
 *.vrb
 *.xdy
-*.tdo
